developed password controller and create event listener and jobs for send sms or email
