# api/routes/api.php
@@ -2,16 +2,24 @@
 
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\OTPCodeController;
+use App\Http\Controllers\PasswordController;
 use Illuminate\Support\Facades\Route;
 
-Route::controller(AuthController::class)->middleware('auth:api')->prefix('auth')->group(function () {
-    Route::post('login', 'login')->withoutMiddleware('auth:api');
-    Route::post('me', 'me');
-    Route::post('refresh', 'refresh');
-    Route::post('logout', 'logout');
-});
+Route::middleware('auth:api')->group(function () {
+    Route::controller(AuthController::class)->prefix('auth')->group(function () {
+        Route::post('login', 'login')->withoutMiddleware('auth:api');
+        Route::post('me', 'me');
+        Route::post('refresh', 'refresh');
+        Route::post('logout', 'logout');
+    });
 
-Route::controller(OTPCodeController::class)->prefix('otp-code')->group(function () {
-    Route::post('generate', 'generate');
-    Route::post('verify', 'verify');
+    Route::controller(OTPCodeController::class)->prefix('otp-code')->withoutMiddleware('auth:api')->group(function () {
+        Route::post('generate', 'generate');
+        Route::post('verify', 'verify');
+    });
+
+    Route::controller(PasswordController::class)->prefix('password')->group(function () {
+        Route::post('reset', 'reset');
+        Route::post('change', 'change');
+    });
 });
